<?xml version="1.0"?>
<package>
  <name>rt_timer</name>
  <version>0.5.3</version>
  <description>Provides a C++ timer (header) API with real-time safe code for Xenomai if available.</description>

  <maintainer email="kalakris@usc.edu">Mrinal Kalakrishnan</maintainer>
  <author email="kalakris@usc.edu">Mrinal Kalakrishnan</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
